# yuannn_chat

./: .gitignore  BUSINESS.md  README.md  backup.sql  config copy.ini  config.ini  generate.sh  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto  readme.md  下一步任务.md
.github/workflows/: windows-build.yml
client/: CMakeLists.txt  config.ini  rc.qrc
client/Forms/: ChatDialog.ui  Login.ui  MainWindow.ui  RegisterDialog.ui  chatdialog.ui  chatpage.ui  chatuserwid.ui  mainwindow.ui  resetdialog.ui
client/Headers/: ClickedLabel.hpp  Global.hpp  HttpMgr.hpp  Login.hpp  MainWindow.hpp  RegisterDialog.hpp  Singleton.hpp  TcpMgr.hpp  TimerBtn.hpp  UserMgr.hpp  chatdialog.hpp  chatuserlist.hpp  chatuserwid.hpp  clickedbtn.hpp  customizeedit.hpp  global.h  listitembase.hpp  resetdialog.hpp  tcpmgr.h  userdata.hpp
client/Resource/: res.qrc
client/Resource/style/: styleSheets.qss
client/Sources/: ClickedLabel.cpp  Global.cpp  HttpMgr.cpp  Login.cpp  MainWindow.cpp  RegisterDialog.cpp  TcpMgr.cpp  TextBubble.cpp  TimerBtn.cpp  UserMgr.cpp  applyfriendpage.cpp  authenfriend.cpp  chatdialog.cpp  chatuserlist.cpp  chatuserwid.cpp  clickedbtn.cpp  contactuserlist.cpp  customizeedit.cpp  global.cpp  listitembase.cpp  logindialog.cpp  main.cpp  mainwindow.cpp  registerdialog.cpp  res.qrc  resetdialog.cpp  tcpmgr.cpp  userdata.cpp
client/style/: styleSheets.qss
server/ChatServer/: CMakeLists.txt  config.ini
server/ChatServer/Headers/: CServer.hpp  CSession.hpp  ChatServiceImpl.hpp  ConfigMgr.hpp  LogicSystem.hpp  MsgNode.hpp  MysqlDAO.hpp  MysqlMgr.hpp  RedisMgr.hpp  UserMgr.hpp  const.hpp  data.hpp
server/ChatServer/Sources/: CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatServer.cpp  ChatServiceImpl.cpp  DistLock.cpp  LogicSystem.cpp  MysqlDAO.cpp  MysqlMgr.cpp  RedisMgr.cpp  UserMgr.cpp
server/ChatServer/sql/: create_messages.sql  create_threads.sql
server/ChatServer2/Headers/: AsioIOServicePool.hpp  CSession.hpp  ChatGrpcClient.hpp  message.grpc.pb.h
server/ChatServer2/Sources/: AsioIOServicePool.cpp  CServer.cpp  CSession.cpp  ConfigMgr.cpp  DistLock.cpp  MsgNode.cpp  MysqlDAO.cpp  message.grpc.pb.cc
server/GateServer/: CMakeLists.txt  config.ini  message.proto
server/GateServer/Headers/: AsioIOServicePool.hpp  ConfigMgr.hpp  HttpConnection.hpp  LogicSystem.hpp  MysqlDAO.hpp  MysqlMgr.hpp  RedisMgr.hpp  Server.hpp  Singleton.hpp  StatusGrpcClient.hpp  VarifyGrpcClient.hpp  VerifyGrpcClient.hpp  const.hpp  message.grpc.pb.h
server/GateServer/Sources/: ConfigMgr.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDAO.cpp  MysqlMgr.cpp  RedisMgr.cpp  Server.cpp  StatusGrpcClient.cpp  VarifyGrpcClient.cpp  VerifyGrpcClient.cpp  main.cpp  message.grpc.pb.cc
server/StatusServer/: CMakeLists.txt  config.ini
server/StatusServer/Headers/: ConfigMgr.hpp  MysqlDAO.hpp  MysqlMgr.hpp  StatusServiceImpl.hpp  const.hpp  message.grpc.pb.h
server/StatusServer/Sources/: MysqlDAO.cpp  MysqlMgr.cpp  StatusServer.cpp  StatusServiceImpl.cpp  message.pb.cc
server/VarifyServer/: config.js  const.js  email.js  server.js
server/VerifyServer/: config.js  email.js  proto.js  server.js
